--- a/package.json
+++ b/package.json
@@ -4,14 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
-    "@ckeditor/ckeditor5-build-decoupled-document": "^16.0.0",
-    "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@ckeditor/ckeditor5-upload": "^16.0.0",
-    "@react-page/plugins-background": "^0.17.0-beta.8",
-    "@react-page/plugins-slate": "^0.17.0-beta.8",
-    "@react-page/react-page": "^0.17.0-beta.8",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.7",
@@ -21,17 +14,14 @@
     "duo_web_sdk": "git+https://github.com/duosecurity/duo_web_sdk.git",
     "graphql": "^14.6.0",
     "isomorphic-unfetch": "^3.0.0",
-    "jodit-react": "^1.0.39",
-    "ory-editor": "^0.6.0",
-    "ory-editor-core": "^0.6.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react-summernote": "^2.0.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "suneditor-react": "^2.5.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
