--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "graphql": "^14.6.0",
     "isomorphic-unfetch": "^3.0.0",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-use-upload": "^0.5.9",
     "redux": "^4.0.5",
     "suneditor-react": "^2.5.1"
   },
