--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
     "apollo-upload-client": "^12.1.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "draft-js": "^0.11.4",
+    "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "duo_web_sdk": "git+https://github.com/duosecurity/duo_web_sdk.git",
     "graphql": "^14.6.0",
+    "html-to-draftjs": "^1.5.0",
+    "immutable": "^4.0.0-rc.12",
     "isomorphic-unfetch": "^3.0.0",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-draft-wysiwyg": "^1.14.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-trumbowyg": "^1.1.0",
     "react-use-upload": "^0.5.9",
     "redux": "^4.0.5",
     "suneditor-react": "^2.6.7"
@@ -47,5 +54,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
