--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-upload-client": "^12.1.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "draft-convert": "^2.1.8",
     "draft-js": "^0.11.4",
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
@@ -21,6 +22,7 @@
     "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0-rc.12",
     "isomorphic-unfetch": "^3.0.0",
+    "jodit-react": "^1.0.42",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-app-rewired": "^2.1.5",
