--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-upload-client": "^12.1.0",
     "babel-plugin-import": "^1.13.0",
+    "chart.js": "^2.9.3",
     "customize-cra": "^0.9.1",
     "draft-js": "^0.11.4",
     "draft-js-export-html": "^1.4.1",
@@ -25,6 +26,7 @@
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-app-rewired": "^2.1.5",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.4",
     "react-redux": "^7.1.3",
