--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.4",
+    "react-export-excel": "^0.5.3",
     "react-image-picker": "^1.1.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
