--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.4",
     "react-export-excel": "^0.5.3",
+    "react-image-lightbox": "^5.1.1",
     "react-image-picker": "^1.1.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
