--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bvanh.github.io/cms-clappigames",
+  "homepage": "https://cms-clappigames/cms",
   "name": "cms-clappigames",
   "version": "0.1.0",
   "private": true,
